SAR Blai Sandbox/src/objects/ASR__c.object
<CustomObject>
    <description>Agradecimientos, sugerencias y reclamaciones</description>
    <fields>
        <fullName>Centro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Centro</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Activo__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAeAAAW</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ASR y Satisfacion Clientes (Centro)</relationshipLabel>
        <relationshipName>ASR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Cliente/Familiar</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Satisfacion Clientes</relationshipLabel>
        <relationshipName>ASR_y_Satisfacion_Clientes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Colectivo__c</fullName>
        <label>Colectivo</label>
        <picklist>
            <controllingField>Tipo_de_Servicio__c</controllingField>
            <picklistValues>
                <fullName>ALCALÁ DE HENARES FEMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALCOBENDAS FEMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALTA RIBAGORÇA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALT D&apos;URGELL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARÁN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGANDA DEL REY FEMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO ALBAIDA DEL ALJARAFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO ALHAURÍN EL GRANDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO ARGANDA DEL REY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO AVILÉS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTOCÁDIZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO CAMPOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO CANTILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO DON BENITO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO ÉCIJA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO EL PEDROSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO EL RUBIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO EL SAUCEJO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO GERENA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO HERRERA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO JEREZ DE LA FRONTERA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO LA ALGABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO LA PUEBLA DEL RIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO LA RODA DE ANDALUCÍA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO LAS NAVAS DE LA CONCEPCIÓN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO LORA DEL RÍO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO LOS CORRALES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO LOS MOLARES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO MARTÍN DE LA JARA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AYUNTAMIENTO MONTELLANO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>TEXT(Centro__r.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>División</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_ATC_centro__c</fullName>
        <label>Email ATC centro</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_director_centro__c</fullName>
        <label>Email director centro</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <picklist>
            <picklistValues>
                <fullName>Abierta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerrada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anulada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fecha_cierre__c</fullName>
        <label>Fecha cierre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_contestacion__c</fullName>
        <label>Fecha contestación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_encuesta__c</fullName>
        <label>Fecha encuesta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_recepcion__c</fullName>
        <label>Fecha recepción</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Motivo__c</fullName>
        <label>Motivo</label>
        <picklist>
            <picklistValues>
                <fullName>Actividad Comercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administración - Facturación, Tarifa, forma pago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administración - Gestiones y trámites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atención alarmas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atención demandas/resolución de situaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atención emergencias en domicilio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ayudas técnicas y/ó tecnológicas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convivencia entre residentes/usuarios/clientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinación con administración</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facturación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funcionamiento dispositivos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funcionamiento sistemas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incidencia con llaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Información a familia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instalaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Llamadas seguimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuevos servicios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organización y Confort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros (detallar)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestación del Servicio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestación del Servicio - Actividades y Terapias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestación del Servicio - Atención y cuidados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestación del Servicio - Enseres personales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestación del Servicio - Extravío/Hurto/Robo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestación del Servicio - Información</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestación del Servicio - Material utilizado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolución de incidencias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RRHH - Incumplimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RRHH - Nómina u otros trámites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RRHH-Organización y distribución tareas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nombre_del_receptor__c</fullName>
        <label>Nombre del receptor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_responsable_accion__c</fullName>
        <label>Nombre responsable acción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Origen__c</fullName>
        <label>Origen</label>
        <picklist>
            <picklistValues>
                <fullName>Hoja ASR SARq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libro oficial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correo electrónico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Llamada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Otros_Emisores__c</fullName>
        <label>Otros Emisores</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Persona_Emisora__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Persona Emisora</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAe0AAG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ASR (Persona Emisora)</relationshipLabel>
        <relationshipName>ASR1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receptor__c</fullName>
        <label>Receptor</label>
        <picklist>
            <picklistValues>
                <fullName>Administración</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asistente/a a Dirección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC Zona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atención al Cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auxiliar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinador/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección control interno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección División</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección médica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/a General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/a Territorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director departamento/área</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educador/a Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enfermería</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipo Coordinación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipo técnico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jefe/a de SSHH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Médico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal del centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal SS.HH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Por revisar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presidente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recepcionista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsable Absentismo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsable del servicio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recomendador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recomendador</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ASR (Recomendador)</relationshipLabel>
        <relationshipName>ASR3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referente_a__c</fullName>
        <label>Referente a</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Residente_usuario__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residente / Usuario</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Residente__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ASR (Residente)</relationshipLabel>
        <relationshipName>ASR2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsable_Accion__c</fullName>
        <label>Responsable Acción</label>
        <picklist>
            <picklistValues>
                <fullName>Administración</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asistente de Dirección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC Zona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atención al Cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinador/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinador/a DUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección División</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirección médica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director/a Territorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directora control interno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jefa Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jefe de SSHH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Médico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsable Absentismo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsable del servicio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsable de mantenimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsable de transporte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajador/a Social</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_Emisor__c</fullName>
        <label>Tipo Emisor</label>
        <picklist>
            <picklistValues>
                <fullName>Administración</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amigo / conocido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consejo de Clientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consejo de Residentes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director administración</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director Asistencial nacional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director comercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director de compras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director de zona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director médico provincial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director médico territorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director o jefe calidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director provincial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipo de Coordinación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institución</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jefe de ventas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Por revisar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profesional externo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proveedor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsable de negocio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutor legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usuario Adorea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usuario centro de día</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usuario residencia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Agradecimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sugerencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reclamación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incidencia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Servicio__c</fullName>
        <label>Tipo de Servicio</label>
        <picklist>
            <picklistValues>
                <fullName>Privado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Público</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_encuesta__c</fullName>
        <label>Tipo encuesta</label>
        <picklist>
            <picklistValues>
                <fullName>No contratan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuevos Clientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fidelización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ASR / Encuesta Satisfación</label>
    <listViews>
        <fullName>ASR</fullName>
        <columns>NAME</columns>
        <columns>Centro__c</columns>
        <columns>Estado__c</columns>
        <columns>Tipo__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Fecha_recepcion__c</columns>
        <columns>Origen__c</columns>
        <columns>Receptor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Estado__c</field>
            <operation>equals</operation>
            <value>Abierta</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASR__c.ASR</value>
        </filters>
        <label>ASR Abiertos</label>
    </listViews>
    <listViews>
        <fullName>ASR_Vencidas</fullName>
        <columns>NAME</columns>
        <columns>Centro__c</columns>
        <columns>Estado__c</columns>
        <columns>Fecha_recepcion__c</columns>
        <columns>Fecha_contestacion__c</columns>
        <columns>Motivo__c</columns>
        <columns>Origen__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fecha_recepcion__c</field>
            <operation>lessThan</operation>
            <value>N_DAYS_AGO:5</value>
        </filters>
        <filters>
            <field>Estado__c</field>
            <operation>equals</operation>
            <value>Abierta</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASR__c.ASR</value>
        </filters>
        <label>ASR Vencidos</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Centro__c</columns>
        <columns>Motivo__c</columns>
        <columns>Descripcion__c</columns>
        <columns>Estado__c</columns>
        <columns>Origen__c</columns>
        <columns>Fecha_recepcion__c</columns>
        <columns>Fecha_contestacion__c</columns>
        <columns>Fecha_cierre__c</columns>
        <columns>Persona_Emisora__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASR__c.ASR</value>
        </filters>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}-{000000}</displayFormat>
        <label>Contador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASR y Satisfacion Clientes</pluralLabel>
    <recordTypes>
        <fullName>ASR</fullName>
        <active>true</active>
        <description>Agradecimientos, sugerencias y recomendaciones</description>
        <label>ASR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Satisfacion_Cliente</fullName>
        <active>true</active>
        <description>Encuestas de satisfación cliente</description>
        <label>Satisfación Cliente</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Informar_emisor</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Persona_Emisora__c )   &amp;&amp;   ISBLANK( Residente_usuario__c )  &amp;&amp;  ISBLANK( Recomendador__c )  &amp;&amp;  ISBLANK( Otros_Emisores__c )</errorConditionFormula>
        <errorMessage>Es obligatorio informar el emisor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_fecha_cierre</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Estado__c , &apos;Cerrada&apos;) &amp;&amp;  ISBLANK( Fecha_cierre__c)</errorConditionFormula>
        <errorDisplayField>Fecha_cierre__c</errorDisplayField>
        <errorMessage>Campo obligatorio para cerrarla</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Informar_observaciones</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Estado__c  , &apos;Cerrada&apos;)  &amp;&amp;  ISBLANK( Observaciones__c )</errorConditionFormula>
        <errorDisplayField>Observaciones__c</errorDisplayField>
        <errorMessage>Obligatorio informar</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_modificar_ASR_cerrada</fullName>
        <active>true</active>
        <description>No permitir modificar una ASR cerrada</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(Estado__c), &apos;Cerrada&apos;) &amp;&amp;  NOT($User.Id=&apos;005b0000001JSTy&apos; || $User.Id=&apos;005b0000000kiZe&apos; ||$User.Id=&apos;005b0000000kj7H&apos;)</errorConditionFormula>
        <errorMessage>No se puede modificar una ASR en estado Cerrada</errorMessage>
    </validationRules>
</CustomObject>